android/src/appersonlabs/carbon/TSSParser.java
// $ANTLR 3.4 /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g 2012-12-07 10:51:10

package appersonlabs.carbon;

import ti.modules.titanium.ui.UIModule;
import java.util.Map;
import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class TSSParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY", "BlockComment", "CharEsc", "DQChar", "EXPR", "EscapeSeq", "Exp", "FALSE", "FIELD", "Float", "HexDigit", "HexEsc", "IdPart", "Identifier", "Integer", "LT", "LineComment", "NULL", "NUMBER", "OBJECT", "Predicate", "SELECTOR", "SQChar", "STRING", "STYLE", "Sign", "String", "StyleName", "TRUE", "TiConst", "TiUIFill", "TiUISize", "UnicodeEsc", "WPATH", "Whitespace", "','", "':'", "'['", "']'", "'false'", "'null'", "'true'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int ARRAY=4;
    public static final int BlockComment=5;
    public static final int CharEsc=6;
    public static final int DQChar=7;
    public static final int EXPR=8;
    public static final int EscapeSeq=9;
    public static final int Exp=10;
    public static final int FALSE=11;
    public static final int FIELD=12;
    public static final int Float=13;
    public static final int HexDigit=14;
    public static final int HexEsc=15;
    public static final int IdPart=16;
    public static final int Identifier=17;
    public static final int Integer=18;
    public static final int LT=19;
    public static final int LineComment=20;
    public static final int NULL=21;
    public static final int NUMBER=22;
    public static final int OBJECT=23;
    public static final int Predicate=24;
    public static final int SELECTOR=25;
    public static final int SQChar=26;
    public static final int STRING=27;
    public static final int STYLE=28;
    public static final int Sign=29;
    public static final int String=30;
    public static final int StyleName=31;
    public static final int TRUE=32;
    public static final int TiConst=33;
    public static final int TiUIFill=34;
    public static final int TiUISize=35;
    public static final int UnicodeEsc=36;
    public static final int WPATH=37;
    public static final int Whitespace=38;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public TSSParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public TSSParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return TSSParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g"; }



    private Number decodeConstant(String name) {
      return new Long(0);
    }



    public static class stylesheet_return extends ParserRuleReturnScope {
        public List<Map<String,Map<String,Object>>> styles;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stylesheet"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:145:1: stylesheet returns [List<Map<String,Map<String,Object>>> styles] : style[$styles] ( ',' style[$styles] )* ;
    public final TSSParser.stylesheet_return stylesheet() throws RecognitionException {
        TSSParser.stylesheet_return retval = new TSSParser.stylesheet_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal2=null;
        TSSParser.style_return style1 =null;

        TSSParser.style_return style3 =null;


        Object char_literal2_tree=null;


        		retval.styles = new ArrayList<Map<String,Map<String,Object>>>();
        	
        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:149:2: ( style[$styles] ( ',' style[$styles] )* )
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:149:4: style[$styles] ( ',' style[$styles] )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_style_in_stylesheet783);
            style1=style(retval.styles);

            state._fsp--;

            adaptor.addChild(root_0, style1.getTree());

            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:149:19: ( ',' style[$styles] )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==39) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:149:21: ',' style[$styles]
            	    {
            	    char_literal2=(Token)match(input,39,FOLLOW_39_in_stylesheet788); 
            	    char_literal2_tree = 
            	    (Object)adaptor.create(char_literal2)
            	    ;
            	    adaptor.addChild(root_0, char_literal2_tree);


            	    pushFollow(FOLLOW_style_in_stylesheet790);
            	    style3=style(retval.styles);

            	    state._fsp--;

            	    adaptor.addChild(root_0, style3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stylesheet"


    public static class style_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "style"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:152:1: style[List list] : selector ':' object ;
    public final TSSParser.style_return style(List list) throws RecognitionException {
        TSSParser.style_return retval = new TSSParser.style_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal5=null;
        TSSParser.selector_return selector4 =null;

        TSSParser.object_return object6 =null;


        Object char_literal5_tree=null;

        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:153:2: ( selector ':' object )
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:153:4: selector ':' object
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_selector_in_style806);
            selector4=selector();

            state._fsp--;

            adaptor.addChild(root_0, selector4.getTree());

            char_literal5=(Token)match(input,40,FOLLOW_40_in_style808); 
            char_literal5_tree = 
            (Object)adaptor.create(char_literal5)
            ;
            adaptor.addChild(root_0, char_literal5_tree);


            pushFollow(FOLLOW_object_in_style810);
            object6=object();

            state._fsp--;

            adaptor.addChild(root_0, object6.getTree());


            		Map<String,Map<String,Object>> style = new HashMap<String,Map<String,Object>>(1);
            		style.put((selector4!=null?selector4.sel:null), (object6!=null?object6.obj:null));
            		list.add(style);
            	

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "style"


    public static class selector_return extends ParserRuleReturnScope {
        public String sel;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "selector"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:161:1: selector returns [String sel] : ( StyleName | Identifier | string );
    public final TSSParser.selector_return selector() throws RecognitionException {
        TSSParser.selector_return retval = new TSSParser.selector_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token StyleName7=null;
        Token Identifier8=null;
        TSSParser.string_return string9 =null;


        Object StyleName7_tree=null;
        Object Identifier8_tree=null;

        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:162:2: ( StyleName | Identifier | string )
            int alt2=3;
            switch ( input.LA(1) ) {
            case StyleName:
                {
                alt2=1;
                }
                break;
            case Identifier:
                {
                alt2=2;
                }
                break;
            case String:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:162:4: StyleName
                    {
                    root_0 = (Object)adaptor.nil();


                    StyleName7=(Token)match(input,StyleName,FOLLOW_StyleName_in_selector828); 
                    StyleName7_tree = 
                    (Object)adaptor.create(StyleName7)
                    ;
                    adaptor.addChild(root_0, StyleName7_tree);


                     retval.sel = (StyleName7!=null?StyleName7.getText():null); 

                    }
                    break;
                case 2 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:163:4: Identifier
                    {
                    root_0 = (Object)adaptor.nil();


                    Identifier8=(Token)match(input,Identifier,FOLLOW_Identifier_in_selector836); 
                    Identifier8_tree = 
                    (Object)adaptor.create(Identifier8)
                    ;
                    adaptor.addChild(root_0, Identifier8_tree);


                     retval.sel = (Identifier8!=null?Identifier8.getText():null); 

                    }
                    break;
                case 3 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:164:4: string
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_string_in_selector844);
                    string9=string();

                    state._fsp--;

                    adaptor.addChild(root_0, string9.getTree());

                     retval.sel = (string9!=null?string9.str:null); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "selector"


    public static class object_return extends ParserRuleReturnScope {
        public Map<String,Object> obj;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "object"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:169:1: object returns [Map<String,Object> obj] : ( '{' '}' | '{' members[$obj] '}' );
    public final TSSParser.object_return object() throws RecognitionException {
        TSSParser.object_return retval = new TSSParser.object_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal10=null;
        Token char_literal11=null;
        Token char_literal12=null;
        Token char_literal14=null;
        TSSParser.members_return members13 =null;


        Object char_literal10_tree=null;
        Object char_literal11_tree=null;
        Object char_literal12_tree=null;
        Object char_literal14_tree=null;


        		retval.obj = new HashMap<String,Object>();
        	
        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:173:2: ( '{' '}' | '{' members[$obj] '}' )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==46) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==47) ) {
                    alt3=1;
                }
                else if ( (LA3_1==Identifier||LA3_1==String) ) {
                    alt3=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:173:4: '{' '}'
                    {
                    root_0 = (Object)adaptor.nil();


                    char_literal10=(Token)match(input,46,FOLLOW_46_in_object871); 
                    char_literal10_tree = 
                    (Object)adaptor.create(char_literal10)
                    ;
                    adaptor.addChild(root_0, char_literal10_tree);


                    char_literal11=(Token)match(input,47,FOLLOW_47_in_object873); 
                    char_literal11_tree = 
                    (Object)adaptor.create(char_literal11)
                    ;
                    adaptor.addChild(root_0, char_literal11_tree);


                    }
                    break;
                case 2 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:174:5: '{' members[$obj] '}'
                    {
                    root_0 = (Object)adaptor.nil();


                    char_literal12=(Token)match(input,46,FOLLOW_46_in_object879); 
                    char_literal12_tree = 
                    (Object)adaptor.create(char_literal12)
                    ;
                    adaptor.addChild(root_0, char_literal12_tree);


                    pushFollow(FOLLOW_members_in_object881);
                    members13=members(retval.obj);

                    state._fsp--;

                    adaptor.addChild(root_0, members13.getTree());

                    char_literal14=(Token)match(input,47,FOLLOW_47_in_object884); 
                    char_literal14_tree = 
                    (Object)adaptor.create(char_literal14)
                    ;
                    adaptor.addChild(root_0, char_literal14_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "object"


    public static class members_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "members"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:177:1: members[Map<String,Object> obj] : pair[obj] ( ',' pair[obj] )* ( ',' )? ;
    public final TSSParser.members_return members(Map<String,Object> obj) throws RecognitionException {
        TSSParser.members_return retval = new TSSParser.members_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal16=null;
        Token char_literal18=null;
        TSSParser.pair_return pair15 =null;

        TSSParser.pair_return pair17 =null;


        Object char_literal16_tree=null;
        Object char_literal18_tree=null;

        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:178:2: ( pair[obj] ( ',' pair[obj] )* ( ',' )? )
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:178:4: pair[obj] ( ',' pair[obj] )* ( ',' )?
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_pair_in_members896);
            pair15=pair(obj);

            state._fsp--;

            adaptor.addChild(root_0, pair15.getTree());

            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:178:14: ( ',' pair[obj] )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==39) ) {
                    int LA4_1 = input.LA(2);

                    if ( (LA4_1==Identifier||LA4_1==String) ) {
                        alt4=1;
                    }


                }


                switch (alt4) {
            	case 1 :
            	    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:178:16: ',' pair[obj]
            	    {
            	    char_literal16=(Token)match(input,39,FOLLOW_39_in_members901); 
            	    char_literal16_tree = 
            	    (Object)adaptor.create(char_literal16)
            	    ;
            	    adaptor.addChild(root_0, char_literal16_tree);


            	    pushFollow(FOLLOW_pair_in_members903);
            	    pair17=pair(obj);

            	    state._fsp--;

            	    adaptor.addChild(root_0, pair17.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:178:32: ( ',' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==39) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:178:32: ','
                    {
                    char_literal18=(Token)match(input,39,FOLLOW_39_in_members908); 
                    char_literal18_tree = 
                    (Object)adaptor.create(char_literal18)
                    ;
                    adaptor.addChild(root_0, char_literal18_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "members"


    public static class key_return extends ParserRuleReturnScope {
        public String text;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "key"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:181:1: key returns [String text] : ( String | Identifier );
    public final TSSParser.key_return key() throws RecognitionException {
        TSSParser.key_return retval = new TSSParser.key_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token String19=null;
        Token Identifier20=null;

        Object String19_tree=null;
        Object Identifier20_tree=null;

        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:182:2: ( String | Identifier )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==String) ) {
                alt6=1;
            }
            else if ( (LA6_0==Identifier) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:182:4: String
                    {
                    root_0 = (Object)adaptor.nil();


                    String19=(Token)match(input,String,FOLLOW_String_in_key924); 
                    String19_tree = 
                    (Object)adaptor.create(String19)
                    ;
                    adaptor.addChild(root_0, String19_tree);


                     retval.text = (String19!=null?String19.getText():null); 

                    }
                    break;
                case 2 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:183:5: Identifier
                    {
                    root_0 = (Object)adaptor.nil();


                    Identifier20=(Token)match(input,Identifier,FOLLOW_Identifier_in_key933); 
                    Identifier20_tree = 
                    (Object)adaptor.create(Identifier20)
                    ;
                    adaptor.addChild(root_0, Identifier20_tree);


                     retval.text = (Identifier20!=null?Identifier20.getText():null); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "key"


    public static class pair_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "pair"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:186:1: pair[Map<String,Object> obj] : key ':' value ;
    public final TSSParser.pair_return pair(Map<String,Object> obj) throws RecognitionException {
        TSSParser.pair_return retval = new TSSParser.pair_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal22=null;
        TSSParser.key_return key21 =null;

        TSSParser.value_return value23 =null;


        Object char_literal22_tree=null;

        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:187:2: ( key ':' value )
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:187:4: key ':' value
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_key_in_pair947);
            key21=key();

            state._fsp--;

            adaptor.addChild(root_0, key21.getTree());

            char_literal22=(Token)match(input,40,FOLLOW_40_in_pair949); 
            char_literal22_tree = 
            (Object)adaptor.create(char_literal22)
            ;
            adaptor.addChild(root_0, char_literal22_tree);


            pushFollow(FOLLOW_value_in_pair951);
            value23=value();

            state._fsp--;

            adaptor.addChild(root_0, value23.getTree());

             obj.put((key21!=null?key21.text:null), (value23!=null?value23.val:null)); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "pair"


    public static class array_return extends ParserRuleReturnScope {
        public List arr;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "array"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:190:1: array returns [List arr] : ( '[' ']' | '[' elements ']' );
    public final TSSParser.array_return array() throws RecognitionException {
        TSSParser.array_return retval = new TSSParser.array_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal24=null;
        Token char_literal25=null;
        Token char_literal26=null;
        Token char_literal28=null;
        TSSParser.elements_return elements27 =null;


        Object char_literal24_tree=null;
        Object char_literal25_tree=null;
        Object char_literal26_tree=null;
        Object char_literal28_tree=null;


        		retval.arr = new ArrayList();
        	
        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:194:2: ( '[' ']' | '[' elements ']' )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==41) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==42) ) {
                    alt7=1;
                }
                else if ( (LA7_1==EXPR||LA7_1==Float||LA7_1==Integer||LA7_1==String||(LA7_1 >= TiConst && LA7_1 <= TiUISize)||LA7_1==WPATH||LA7_1==41||(LA7_1 >= 43 && LA7_1 <= 46)) ) {
                    alt7=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:194:4: '[' ']'
                    {
                    root_0 = (Object)adaptor.nil();


                    char_literal24=(Token)match(input,41,FOLLOW_41_in_array975); 
                    char_literal24_tree = 
                    (Object)adaptor.create(char_literal24)
                    ;
                    adaptor.addChild(root_0, char_literal24_tree);


                    char_literal25=(Token)match(input,42,FOLLOW_42_in_array977); 
                    char_literal25_tree = 
                    (Object)adaptor.create(char_literal25)
                    ;
                    adaptor.addChild(root_0, char_literal25_tree);


                    }
                    break;
                case 2 :
                    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:195:4: '[' elements ']'
                    {
                    root_0 = (Object)adaptor.nil();


                    char_literal26=(Token)match(input,41,FOLLOW_41_in_array982); 
                    char_literal26_tree = 
                    (Object)adaptor.create(char_literal26)
                    ;
                    adaptor.addChild(root_0, char_literal26_tree);


                    pushFollow(FOLLOW_elements_in_array984);
                    elements27=elements();

                    state._fsp--;

                    adaptor.addChild(root_0, elements27.getTree());

                    char_literal28=(Token)match(input,42,FOLLOW_42_in_array986); 
                    char_literal28_tree = 
                    (Object)adaptor.create(char_literal28)
                    ;
                    adaptor.addChild(root_0, char_literal28_tree);


                     retval.arr.addAll((elements27!=null?elements27.ele:null)); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "array"


    public static class elements_return extends ParserRuleReturnScope {
        public List ele;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "elements"
    // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:198:1: elements returns [List ele] :v+= value ( ',' v+= value )* ;
    public final TSSParser.elements_return elements() throws RecognitionException {
        TSSParser.elements_return retval = new TSSParser.elements_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal29=null;
        List list_v=null;
        RuleReturnScope v = null;
        Object char_literal29_tree=null;


        		retval.ele = new ArrayList();
        	
        try {
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:202:2: (v+= value ( ',' v+= value )* )
            // /Users/paul/Desktop/Dropbox/apperson/carbon/Carbon/android/src/appersonlabs/carbon/TSS.g:202:4: v+= value ( ',' v+= value )*
            {
            root_0 = (Object)adaptor.nil();

